# Copilot-Research

./: .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bmad-logica-detalhada-context-builder.md
.cursor/: mcp.json
.cursor/rules/: project-structure.mdc  review-rules.md
.cursor/skills/: validate-analysis-findings.md
.cursor/subagents/: finding-validator.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: bump_pyproject_version.py
.github/workflows/: bump-version-and-tag.yml  ci.yml  release.yml
copilot-comportamento/: README.md  checklist-novo-repo.md  convenções-prompts.md  gestao-sessao-janela-contexto.md  orquestracao-mcp-pseudo-hook.md  politica-camadas.md  roadmap-tools-mcp.md
fixtures/instructions/: artifact-encoding-line-endings-and-unicode.md  (+25 more)
mcp-instructions-server/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
mcp-instructions-server/corporate_instructions_mcp/: __init__.py  __main__.py  indexing.py  paths.py  server.py  telemetry.py
mcp-instructions-server/docs/: HOW-TO-TELEMETRY-LOGS.md  ROADMAP-TRANSPORT-HTTP.md  TESTS.md
mcp-instructions-server/scripts/: print_mcp_tools_list.py
mcp-instructions-server/tests/: integration_mcp_stdio_test.py  smoke_test.py  test_indexing.py  test_paths.py  test_server_frontmatter.py  test_telemetry_ndjson.py
prompts/: PROMPT-20260403-001-limites-mcp-vs-agente.prompt.md  PROMPT-20260403-002-arquitetura-mcp-dotnet-corporativo.prompt.md  PROMPT-20260403-002-instructions-nativas-vs-mcp.prompt.md  PROMPT-20260403-002-mcp-contexto-eficiente.prompt.md  PROMPT-20260403-003-comportamento-agentico-mcp.prompt.md  PROMPT-20260411-001-spaces-mcp-promptfiles-multi-repo.prompt.md  _template.prompt.md
research/: README.md
responses/: PROMPT-20260403-001-limites-mcp-vs-agente.response.md  PROMPT-20260403-002-arquitetura-mcp-dotnet-corporativo.response.md  PROMPT-20260403-002-instructions-nativas-vs-mcp.response.md  PROMPT-20260403-002-mcp-contexto-eficiente.response.md  PROMPT-20260403-003-comportamento-agentico-mcp.response.md  PROMPT-20260411-001-spaces-mcp-promptfiles-multi-repo.response.md  _template.response.md
templates/: copilot-instructions.thin.md
(+95 files in other folders)
