[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corporate-instructions-mcp"
version = "0.1.0"
description = "MCP read-only server for centralized Copilot/GitHub instructions corpus"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
corporate-instructions-mcp = "corporate_instructions_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["corporate_instructions_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
